  for parser testing. See parsing/HACKING.adoc.
  (Gabriel Scherer, review by Nicolás Ojeda Bär)

- GPR#2055: Add [Linearize.Lprologue].
  (Mark Shinwell, review by Pierre Chambart)

- GPR#2056: Use [Backend_var] rather than [Ident] from [Clambda] onwards;
  use [Backend_var.With_provenance] for variables in binding position.
  (Mark Shinwell, review by Pierre Chambart)

<<<<<<< HEAD
- GPR#2060: "Phantom let" support for the Clambda language.
  (Mark Shinwell)

- GPR#2063: Generate [Iname_for_debugger] in [Selectgen].  Skip over certain
  naming operations in [Spill].
  (Mark Shinwell)

- GPR#2065: Add [Proc.destroyed_at_reloadretaddr].
  (Mark Shinwell)

- GPR#2067: Add remaining types and record fields in [Mach] and [Linearize]
  to communicate register availability information to the debugging
  information emitter.
  (Mark Shinwell)

- GPR#2068: Propagate availability information in [Linearize] and adjust
  position of prologue.

- GPR#2070: "Phantom let" support for the Cmm language.
  (Mark Shinwell)

- GPR#2071: "Phantom let" support in [Selectgen].
  (Mark Shinwell)

- GPR#2073: Add [Asm_directives] and [Target_system], initially only for
  the use of the DWARF debugging information emitter.
  (Mark Shinwell)

- GPR#2076: Add [Targetint.print].
  (Mark Shinwell)

- GPR#2080: Add [Proc.dwarf_register_numbers] and
  [Proc.stack_ptr_dwarf_register_number].
  (Mark Shinwell)

- GPR#2081: Mark [Iname_for_debugger] as an impure operation.
  (Mark Shinwell)

- GPR#2077: Add [Dwarf_low] library.
  (Mark Shinwell)

### Bug fixes:

- MPR#7847, GPR#2019: Fix an infinite loop that could occur when the
  (Menhir-generated) parser encountered a syntax error in a certain
  specific state.
  (François Pottier, report by Stefan Muenzel,
  review by Frédéric Bour, Thomas Refis, Gabriel Scherer)

- GPR#1626: Do not allow recursive modules in `with module`
  (Leo White, review by Gabriel Radanne)

- MPR#7726, GPR#1676: Recursive modules, equi-recursive types and stack overflow